# hwpapi

./: .clinerules  .gitignore  AUTO_PROPERTY_DESIGN.md  AUTO_WRAP_DESIGN.md  AUTO_WRAP_IMPLEMENTATION_REPORT.md  CHANGELOG.md  COMPLETION_REPORT.md  DUPLICATE_FIX_SUMMARY.md  LICENSE  PSET_MIGRATION_SUMMARY.md  README.md  TRANSITION_PLAN.md  UNIT_PROPERTY_ENHANCEMENT.md  add_classes_to_notebook.py  add_logging_helper.py  analyze_docs.py  claude.md  complete_refactoring.py  final_verification.txt  generated_classes.txt  property_mismatch_summary.md  pyproject.toml  refactor_helper.py  remove_duplicate_classes.py  replace.ipynb  settings.ini  setup.py  test_logging.py  update_incomplete_classes.py  verification_report.txt  verify_properties.py
.claude/: settings.local.json
.github/workflows/: deploy-docs.yaml  deploy.yaml  publish.yaml  test.yaml
HwpApi/: __init__.py  _modidx.py  actions.py  classes.py  constants.py  core.py  dataclasses.py  document.py  errors.py  functions.py  json_exporter.py  logging.py  parameter_base.py  parameter_mappings.py  parametersets.py  parser.py
HwpApi/_pyinstaller/: __init__.py
HwpApi/classes/: __init__.py  accessors.py  convert.py  (+9 more)
_proc/: 00_core.ipynb  01_action_list.ipynb  01_actions.ipynb  02_functions.ipynb  02_methods.ipynb  03_functions.ipynb  action_parameterset.json  index.ipynb  nbdev.yml  sidebar.yml  sidebar.yml.bak  styles.css
action_table/: Action Table_modified.htm
claude_docs/: SESSION_CHECKPOINT.md  architecture-roadmap.md  architecture.md  auto-properties.md  best-practices.md  code-patterns.md  debugging.md  display-enhancements.md  history.md  issues-and-solutions.md  project-structure.md  testing.md
docs/: .gitignore  API_GUIDE.md  DOCUMENT_PRESETS_PLAN.md  DUPLICATION_AUDIT.md  MIGRATION_v1.md  PYHWPX_COMPARISON.md  REFACTORING_PLAN.md  Untitled.html  V1_READINESS_PLAN.md  _quarto.yml  core.html  fnctions.html  index.html  index.qmd  methods.html  migration-v1-to-v2.qmd  objects.json  render-bilingual.ps1  render-bilingual.sh  robots.txt  search.json  sitemap.xml
examples/: auto_property_demo.py  charshape_bold.py  find_replace.py  hwp_to_json_example.py  mapped_property_display_demo.py  nested_property_demo.py  property_description_display_demo.py  quickstart.py  simple_parser_example.py
hwpapi/: document.py  functions.py  logging.py  selection.py  units.py
nbs/: 00_core.ipynb  01_actions.ipynb  02_api_reference.qmd  02_functions.ipynb  03_functions.ipynb  _quarto.yml  action_info.py  index.ipynb  index.qmd  sidebar.yml  styles.css
notebooks/: 00_base_classes.ipynb
src/: Base.py
tests/: conftest.py  generate_doc_artifacts.py  generate_v2_doc_artifacts.py  smoke_features.py  smoke_scenarios.py  smoke_visual.py  test_all_actions.py  test_all_parametersets.py  test_app_v2_surface.py  test_architecture.py  test_classes.py  test_color_semantics.py  test_config.py  test_constants.py  test_context_managers.py  test_convert.py  test_debug.py  test_deprecations.py  test_discovery.py  test_documents_collection.py  test_enums.py  test_fields_accessor.py  test_fluent_api.py  test_functions.py  test_hparam.py  test_images.py  test_lint.py  test_presets.py  test_selection.py  test_table_accessor.py  test_template.py  test_units.py  test_v014_features.py  test_v015_features.py  test_v016_features.py  test_v017_features.py  test_v018_features.py  test_v019_discovery.py  test_v020_deprecations.py  test_v3_setters_selection.py  (+1 more)
~bs/: nbdev.yml  sidebar.yml
~wpapi/: core.py  methods.py
(+455 files in other folders)
