[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hwpapi"
version = "1.0.0"
description = "Pythonic wrapper for 한컴 오피스(HWP) automation via win32com — 18 accessors, 11 presets, 8 context managers"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "JunDamin", email = "freedomgod@gmail.com"},
]
keywords = ["hwp", "hancom", "korean-word-processor", "python", "win32com", "automation", "office"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Korean",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pywin32",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "PyMuPDF>=1.23",
    "pandas",
]
test = [
    "pytest>=7.0",
    "PyMuPDF>=1.23",
]
docs = [
    "matplotlib",    # tutorial illustrations
    "quartodoc",     # API reference generation for v2.0 Quarto site
    "griffe",        # Python introspection backend for quartodoc
    "jupyter",       # notebook-based recipe pages
]

[project.urls]
Homepage = "https://JunDamin.github.io/hwpapi"
Repository = "https://github.com/JunDamin/hwpapi"
Documentation = "https://JunDamin.github.io/hwpapi"
Issues = "https://github.com/JunDamin/hwpapi/issues"
Changelog = "https://github.com/JunDamin/hwpapi/blob/main/CHANGELOG.md"

[project.entry-points.pyinstaller40]
"hook-dirs" = "hwpapi._pyinstaller:get_hook_dirs"

[tool.setuptools.packages.find]
include = ["hwpapi*"]

[tool.setuptools.package-data]
hwpapi = ["*.dll"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }]
